package pt.isel.poo.g6li21d.Sokoban.view.game;

import android.content.Context;

import pt.isel.poo.g6li21d.Sokoban.model.cells.Cell;

public final class EmptyCellTile extends CellTile {

    EmptyCellTile(Context ctx, Cell cell) {
        super(ctx, cell);
    }

}
